v1.03 - Big maintenance patch 2020
	Upgraded pixi.js from 4.4.1 to 5.1.6
	Rewrote the gradient shader. Lots of extra steps removed and it's now fully documented
	Fixed broken mp3 filepaths in the demo version
	Changed some CSS so the game doesn't require two versions for iFrame and standalone hosting
	Fixed a bunch of poorly designed negative margin CSS code
	New console messages for: Background music, sky gradient changes

v1.02 - Chrome breaks web audio standards
	Added a 'click to start' page to account for the new Chrome autoplay protection
	Fixed a bug that would sometimes crash the loading screen

v1.01 - Day 1 bugs
	Fixed a bug that exposed a piece of the end credits scene, allowing accidental page resets

v1.0 - Initial Release
	TRANSCEND, DIAMOND, and RAINBOW phases
	17 BGM tracks